<resources>
    <string name="app_name">Powerverse</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="heroesSelected">Heroes</string>

    <string name="action_biography">Biography</string>
    <string name="action_appearance">Appearance</string>
    <string name="action_stats">Stats</string>


    <string name="intelligence">Intelligence</string>
    <string name="strength">Strength</string>
    <string name="speed">Speed</string>
    <string name="durability">Durability</string>
    <string name="power">Power</string>
    <string name="combat">Combat</string>

</resources>