<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

<TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/table"
        android:layout_margin="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            tools:text="Intelligence"
            android:text="@string/intelligence"
            android:textAlignment="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/intelligencepoints"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        tools:text="80"
        android:text="@string/intelligence"/>

        <ProgressBar
            android:id="@+id/intelligence"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="100"
            android:progressTint="@color/intelligence"
            android:layout_marginTop="3dp"
            android:layout_marginHorizontal="16dp"
            tools:ignore="MissingConstraints"
            android:layout_weight="1"/>
    </LinearLayout>
</TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/table"
        android:layout_margin="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            tools:text="Strength"
            android:text="@string/strength"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/strengthpoints"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textStyle="bold"
                tools:text="80"
                android:text="@string/strength"/>

        <ProgressBar
            android:id="@+id/strength"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:progress="100"
            android:progressTint="@color/strength"
            android:layout_marginTop="3dp"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"/>

        </LinearLayout>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/table"
        android:layout_margin="2dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            tools:text="Speed"
            android:text="@string/speed"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/speedpoints"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            tools:text="80"
            android:text="@string/speed"/>

        <ProgressBar
            android:id="@+id/speed"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="100"
            android:progressTint="@color/speed"
            android:layout_marginTop="3dp"
            android:layout_marginHorizontal="16dp"
            tools:ignore="MissingConstraints" />
        </LinearLayout>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/table"
        android:layout_margin="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            tools:text="Durability"
            android:text="@string/durability"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/durabilitypoints"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            tools:text="80"
            android:text="@string/durability"/>

        <ProgressBar
            android:id="@+id/durability"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="100"
            android:progressTint="@color/durability"
            android:layout_marginTop="3dp"
            android:layout_marginHorizontal="16dp"
            tools:ignore="MissingConstraints" />
        </LinearLayout>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/table"
        android:layout_margin="2dp">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textStyle="bold"
            tools:text="Power"
            android:text="@string/power"
            tools:ignore="Suspicious0dp"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/powerpoints"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            tools:text="80"
            android:text="@string/power"/>
        <ProgressBar
            android:id="@+id/power"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="100"
            android:progressTint="@color/power"
            android:layout_marginTop="3dp"
            android:layout_marginHorizontal="16dp"
            tools:ignore="MissingConstraints" />
        </LinearLayout>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/table"
        android:layout_margin="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            tools:text="combat"
            tools:ignore="Suspicious0dp"
            android:text="@string/combat"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/combatpoints"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            tools:text="80"
            android:text="@string/combat"/>
        <ProgressBar
            android:id="@+id/combat"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="100"
            android:progressTint="@color/combat"
            android:layout_marginTop="3dp"
            android:layout_marginHorizontal="16dp"
            tools:ignore="MissingConstraints" />
        </LinearLayout>
    </TableLayout>
</LinearLayout>